// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given invalid frontmatter for / should not render a CSP 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Markdown Home
    </title>
  </head>
</html>
<body>
  <h2 id="Home">
    Home
  </h2>
</body>
`;

exports[`given invalid frontmatter for markdown-1 should not render a CSP 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Markdown 1
    </title>
  </head>
</html>
<body>
  <h1>
    Markdown 1
  </h1>
</body>
`;

exports[`given mixed mode policies and env=dev for / should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-home-default.com; img-src https://frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given mixed mode policies and env=dev for markdown-1 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="img-src https://dev-markdown-1-img.com https://frontmatter-markdown-1-img-1.com https://frontmatter-markdown-1-img-2.com; default-src https://frontmatter-markdown-1-default-1.com https://frontmatter-markdown-1-default-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=dev for markdown-2 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://dev-markdown-2-default-1.com https://dev-markdown-2-default-2.com https://frontmatter-markdown-2-default-1.com https://frontmatter-markdown-2-default-2.com; img-src https://dev-markdown-2-img.com https://frontmatter-markdown-2-img-1.com https://frontmatter-markdown-2-img-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for / should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-home-default.com; img-src https://frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for markdown-1 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-markdown-1-default-1.com https://prod-markdown-1-default-2.com https://frontmatter-markdown-1-default-1.com https://frontmatter-markdown-1-default-2.com; img-src https://prod-markdown-1-img.com https://frontmatter-markdown-1-img-1.com https://frontmatter-markdown-1-img-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for markdown-2 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="img-src https://prod-markdown-2-img.com https://frontmatter-markdown-2-img-1.com https://frontmatter-markdown-2-img-2.com; default-src https://frontmatter-markdown-2-default-1.com https://frontmatter-markdown-2-default-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for / should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-index-default.com https://frontmatter-home-default.com; img-src https://frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for markdown-1 should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-markdown-1-default-1.com https://frontmatter-markdown-1-default-2.com; img-src https://frontmatter-markdown-1-img-1.com https://frontmatter-markdown-1-img-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for markdown-2 should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-markdown-2-default-1.com https://frontmatter-markdown-2-default-2.com; img-src https://frontmatter-markdown-2-img-1.com https://frontmatter-markdown-2-img-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;
